Remove printing::PrintingPdfContent().

PrintingPdfContent() uses URLs to figure out if the content to be
printed is PDF or not. This does not work when printing Flash content.
Go back to checking PrintSettings::is_modifiable(), which already works
correctly on Mac. On Windows and Linux, the "is modifiable" setting
needs to be preserved when getting settings from the user in the native
print dialog.

BUG=859481

Change-Id: I674cf3c0f38b87c17fb6d2ca30ebae842c260d8c
Reviewed-on: https://chromium-review.googlesource.com/1146024
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577712}
Former-commit-id: 3764d52b7ff29111f5043e5efcfcc2e6d0ee6dba